force-app/main/default/objects/Doctores__c/Doctores__c.object-meta.xml
<CustomObject>
    <label>Doctores</label>
    <nameField>
        <label>Doctores Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Doctores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>