force-app/main/default/objects/Doctores__c/fields/Especialidad__c.field-meta.xml
<CustomField>
    <fullName>Especialidad__c</fullName>
    <label>Especialidad</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
</CustomField>