force-app/main/default/objects/Doctores__c/fields/Segundo_nombre__c.field-meta.xml
<CustomField>
    <fullName>Segundo_nombre__c</fullName>
    <label>Segundo nombre</label>
    <length>32</length>
    <type>Text</type>
</CustomField>